--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -3,6 +3,7 @@
     <ul class="footer-links">
       <li><%= link_to "About Us", welcome_about_path %></li>
       <li><%= link_to "Guidelines", welcome_guidelines_path %></li>
+      <li class="pull-right">Copyright <i class="fa fa-copyright" aria-hidden="true"></i> 2017</li>
     </ul>
   </nav>
 </footer>
