--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -24,11 +24,11 @@
 
 html {
   height: 100%;
+  font-size: 16px;
 }
 
 body {
-  position: relative;
-  min-height: 100%;
+  height: 100%;
 }
 
 .bar {
@@ -37,13 +37,12 @@ body {
 
 .navigation {
   color: rgba(1,1,1,.4);
-  background-color: #fafafa;
+  background-color: #28363F;
   font-size: 16px;
   font-weight: 500;
   border-bottom: 2px solid rgba(1,1,1,.1);
-
   a {
-    color: rgba(1,1,1,.5);
+    color: white;
     font-size: 16px;
     font-weight: 400;
     font-family: serif;
@@ -174,12 +173,13 @@ body {
   }
 }
 
-.avatar-button {
+#avatar-btn {
   padding-right: 10px;
   padding-top: 7px;
 
   button:nth-child(2) {
     margin-top: 5.5px;
+    color: white;
     }
 }
 
@@ -249,15 +249,19 @@ body {
     letter-spacing: .5px;
 }
 
-.notification-btn {
+#notification-btn {
   padding-right: 10px;
   padding-top: 12px;
   display: flex;
   letter-spacing: 3px;
-}
-
-.glyphicon {
-  font-size: 20px;
+  color: white;
+  .glyphicon {
+    font-size: 20px;
+    color: white;
+  }
+  button {
+    color: white;
+  }
 }
 
 .btn-avatar-notification {
@@ -311,6 +315,9 @@ footer {
   width: 100%;
   bottom: 0;
   margin-bottom: -50px;
+  &.transparent-foot {
+    display: none;
+  }
 
   a {
     color: #555;
@@ -476,6 +483,6 @@ footer {
 
   button {
     font-size: 18px;
-    color: rgba(1,1,1,.5);
+    color: white;
   }
 }
