--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -2,6 +2,38 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+.carousel,.item,.active{
+  height:100%;
+  width: 100%;
+}
+
+.carousel-inner{
+  height:100%;
+}
+
+#myCarousel {
+  img{
+    width: 100%;
+    height: 100%;
+  }
+}
+
+.home-nav {
+  position: absolute;
+  z-index: 100;
+  width: 100%;
+  padding-top: 20px;
+  img {
+    height: 42px;
+  }
+  ul {
+    list-style: none;
+  }
+  li {
+    padding-right: 20px;
+  }
+}
+
 .welcome-slick {
   background-color: rgba(254, 254, 254, 0.5);
   border-radius: 5px;
@@ -45,19 +77,19 @@
     font-size: 16px;
     }
 
-    a {
-      position: absolute;
-      margin-top: 160px;
-      margin-left: 300px;
-      background-color: #287fb8;
-      border: #287fb8;
-      border-radius: 3px;
-      padding: 10px;
-      font-size: 16px;
-      padding-left: 20px;
-      padding-right: 20px;
-      color: white;
-    }
+  a {
+    position: absolute;
+    margin-top: 160px;
+    margin-left: 300px;
+    background-color: #287fb8;
+    border: #287fb8;
+    border-radius: 3px;
+    padding: 10px;
+    font-size: 16px;
+    padding-left: 20px;
+    padding-right: 20px;
+    color: white;
+  }
 }
 
 .info-two {
@@ -85,20 +117,20 @@
     font-size: 16px;
     }
 
-    a {
-      color: white;
-    }
+  a {
+    color: white;
+  }
 
-    .btn-primary {
-      position: absolute;
-      margin-top: 160px;
-      margin-left: 300px;
-      padding-left: 20px;
-      padding-right: 20px;
-      padding-top: 10px;
-      padding-bottom: 10px;
-      font-size: 16px;
-    }
+  .btn-primary {
+    position: absolute;
+    margin-top: 160px;
+    margin-left: 300px;
+    padding-left: 20px;
+    padding-right: 20px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    font-size: 16px;
+  }
 }
 
 .recent-log-container {
@@ -114,17 +146,16 @@
 
 .logs-all{
   padding: 10px;
+  img {
+    width: 400px;
+    height: 250px;
+  }
 
-    img {
-      width: 400px;
-      height: 250px;
-    }
-
-    p {
-      margin-top: 5px;
-      font-size: 16px;
-      color: rgba(1,1,1,.7);
-    }
+  p {
+    margin-top: 5px;
+    font-size: 16px;
+    color: rgba(1,1,1,.7);
+  }
 }
 
 .recent-log-heading {
@@ -132,10 +163,9 @@
   font-size: 24px;
   font-weight: 200;
   padding-top: 20px;
-
-    a{
-      font-size:16px;
-    }
+  a{
+    font-size:16px;
+  }
 }
 
 .how-info {
@@ -160,13 +190,12 @@
 }
 
 .info-row {
-
   .glyphicon {
-    font-size: 100px;
-    color: darkorange;
-    padding: 15px;
-    margin: 10px;
-    }
+  font-size: 100px;
+  color: darkorange;
+  padding: 15px;
+  margin: 10px;
+  }
 }
 
 .border-style {
@@ -190,62 +219,78 @@
 }
 
 .cap-one {
-  margin-bottom: 360px;
-  padding-right: 470px;
-  width: 1000px;
-  text-shadow: none;
-
-    h1 {
-      color: rgba(1,1,1,.6);
-      font-size: 55px;
-      font-weight: 200;
+  margin: 0 auto;
+  padding-bottom: 230px;
+  h1 {
+    font-size: 4.5rem;
+  }
+  p{
+    font-size: 1.8rem;
+  }
+  a {
+    font-size: 1.8rem;
+    color: white;
+  }
+  .btn {
+    border: 2px solid teal;
+    background-color: teal;
+    padding-left: 26px;
+    padding-right: 26px;
+    transition: .5s;
+    &:hover {
+      transform: scale(1.2);
     }
-
-    p {
-      color: rgba(1,1,1,.5);
-      font-size: 22px;
-      float: left;
-      padding-left: 24px;
-    }
+  }
 }
 
 .cap-two {
-  margin-bottom: 300px;
-  padding-left: 430px;
-  width: 1400px;
-  text-shadow: none;
-
-    h1 {
-      font-size: 55px;
-      padding-right: 440px;
-      font-weight: 200;
+  margin: 0 auto;
+  padding-bottom: 250px;
+  h1 {
+    font-size: 4.5rem;
+  }
+  p{
+    font-size: 1.8rem;
+  }
+  a {
+    font-size: 1.8rem;
+    color: white;
+  }
+  .btn {
+    border: 2px solid #F98825;
+    background-color: #F98825;
+    padding-left: 26px;
+    padding-right: 26px;
+    transition: .5s;
+    &:hover {
+      transform: scale(1.2);
     }
-
-    p {
-      font-size: 22px;
-      float: left;
-      padding-left: 22px;
-      font-weight: 200;
-    }
+  }
 }
 
 .cap-three {
-  margin-bottom: 250px;
-  width: 1400px;
-  text-shadow: none;
-
-    h1 {
-      font-size: 55px;
-      margin-right: 970px;
-      font-weight: 200;
+  margin: 0 auto;
+  padding-bottom: 250px;
+  h1 {
+    font-size: 4.5rem;
+  }
+  p{
+    font-size: 1.8rem;
+  }
+  a {
+    font-size: 1.8rem;
+    color: white;
+  }
+  .btn {
+    border: 2px solid #098CE3;
+    background-color: #098CE3;
+    padding-left: 26px;
+    padding-right: 26px;
+    transition: .5s;
+    &:hover {
+      transform: scale(1.2);
     }
-
-    p {
-      font-size: 22px;
-      float: left;
-      font-weight: 200;
-      padding-left: 10px;
-    }
+  }
 }
 
 .about {
@@ -266,25 +311,22 @@
 .guidelines {
   height: 100vh;
   background-color: rgba(1,1,1,.05);
-
-    h1 {
-      border-bottom: 1px solid rgba(1,1,1,.2);
-      font-weight: 400;
-      font-size: 45px;
-    }
+  h1 {
+    border-bottom: 1px solid rgba(1,1,1,.2);
+    font-weight: 400;
+    font-size: 45px;
+  }
 }
 
 .rules {
   background-color: white;
   padding: 10px;
   box-shadow: 0 0 1px;
-
-    h4 {
-      color: rgba(1,1,1,.6);
-      font-weight: 400;
-    }
-
-    p {
-      color: rgba(1,1,1,.5);
-    }
+  h4 {
+    color: rgba(1,1,1,.6);
+    font-weight: 400;
+  }
+  p {
+    color: rgba(1,1,1,.5);
+  }
 }
