--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,4 +1,4 @@
-<footer class="footer">
+<footer class="footer <%= yield(:footer_style) %>">
   <nav>
     <ul class="footer-links">
       <li><%= link_to "About Us", welcome_about_path %></li>
