--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -1,9 +1,6 @@
 // Place all the styles related to the users controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
-.user-page {
-  height: 100%;
-}
 
 .user-heading {
   background-image: url("http://thinkdrawart.witchy-ears.com/wp-content/uploads/2012/04/Fantasy-Sky-Step1.jpg");
@@ -91,10 +88,7 @@
     background-color: rgba(1,1,1,.1);
     text-align: center;
     padding: 20px;
-    max-height: 320px;
-    font-size: 16px;
-    padding-top: 10px;
-    margin-bottom: 20px;
+    font-size: 1rem;
     border: 1px solid rgba(1, 0, 1, .1);
 
     section{
