--- a/app/assets/stylesheets/welcome.scss
+++ b/app/assets/stylesheets/welcome.scss
@@ -32,6 +32,19 @@
   li {
     padding-right: 20px;
   }
+  .btn {
+    border: 2px solid white;
+    &:hover{
+      background-color: white;
+      a{
+        color: grey;
+      }
+    }
+  }
+  a{
+    color: white;
+    font-size: 1rem;
+  }
 }
 
 .welcome-slick {
@@ -170,17 +183,17 @@
 
 .how-info {
   text-align: center;
-  margin-top: 50px;
-  height: 600px;
+  height: auto;
+  padding-bottom: 100px;
+  margin-top: -20px;
   background-color: lightseagreen;
   //background-image: url("http://www.planwallpaper.com/static/images/cool-background.jpg");
-}
-
-.how-title {
-  color: white;
-  padding-top: 50px;
-  font-weight: 100;
-  font-size: 50px;
+  h1 {
+    color: white;
+    padding-top: 50px;
+    font-weight: 100;
+    font-size: 3rem;
+  }
 }
 
 .info-group {
@@ -220,7 +233,7 @@
 
 .cap-one {
   margin: 0 auto;
-  padding-bottom: 230px;
+  padding-bottom: 250px;
   h1 {
     font-size: 4.5rem;
   }
