--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -81,6 +81,7 @@
 
 .wiki-new-page {
   background-color: rgba(1,1,1,.1);
+  padding-bottom: 40px;
 }
 
 .new-wiki-form {
@@ -91,20 +92,21 @@
   padding-top: 5px;
   padding-bottom: 15px;
   background-color: white;
-
-    p {
-      color: rgba(1,1,1,.7);
-      font-weight: 500;
-      font-size: 16px;
-    }
+  p {
+    color: rgba(1,1,1,.7);
+    font-weight: 500;
+    font-size: 1rem;
+  }
 }
 
 .wiki-image-top {
-  text-align: center;
-
-   .back {
-     background-position: center;
-   }
+text-align: center;
+  img{
+    width: 100%;
+  }
+  .back {
+  background-position: center;
+  }
 }
 
 .wiki-details {
@@ -145,6 +147,7 @@
 
 .wiki-show-body {
   background-color: rgba(192, 192, 191, .2);
+  padding-bottom: 20px;
 }
 
 .wiki-description {
@@ -243,6 +246,7 @@
 }
 
 .wiki-icons {
+  font-size: 1.2rem;
   text-align: center;
   padding-top: 10px;
   padding-bottom: 10px;
@@ -251,6 +255,6 @@
 .wiki-media {
   position: absolute;
   top: 0;
-  margin-left: 120px;
-  margin-top: 150px;
+  padding-left: 120px;
+  padding-top: 100px;
 }
