--- a/app/views/welcome/home.html.erb
+++ b/app/views/welcome/home.html.erb
@@ -2,10 +2,10 @@
 <nav class="home-nav">
   <ul>
     <span> <%= link_to image_tag("travelog_logo.png"), root_path %></span>
-    <li class="pull-right"> <%= link_to "Log In", new_user_session_path, class: 'btn btn-default'  %> </li>
+    <li class="pull-right"> <%= link_to "Log In", new_user_session_path, class: 'btn'  %> </li>
   </ul>
 </nav>
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
   <!-- Indicators -->
   <ol class="carousel-indicators">
     <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -14,17 +14,17 @@
   </ol>
   <div class="carousel-inner" role="listbox">
     <div class="item active">
-      <img src="https://www.gurupetfood.com/wp-content/themes/guru/images/grass-background.jpg"  data-color="firebrick">
+      <%= image_tag("pic1.jpg") %>
       <div class="carousel-caption">
         <div class="cap-one">
          <h1>Welcome to Travelog</h1>
-         <p>Travel, Share, and Explore</p>
+         <p>Travel, share, and explore</p>
          <%= link_to "Sign Up", new_user_registration_path, class: 'btn'  %>
         </div>
      </div>
    </div>
    <div class="item">
-      <img src="http://www.moahawaii.org/wp-content/uploads/2013/02/s-nature-bg2-1500x600.jpg">
+      <%= image_tag("pic2.jpg") %>
       <div class="carousel-caption">
         <div class="cap-two">
           <h1>Explore the World</h1>
@@ -34,12 +34,12 @@
       </div>
     </div>
     <div class="item">
-       <img src=" http://itcher.com/mag/wp-content/uploads/2015/10/Egypt-Pyramids-Beautiful-Sunset.jpg">
+       <%= image_tag("pic3.jpg") %>
        <div class="carousel-caption">
          <div class="cap-three">
            <h1>Log Your Adventures</h1>
            <p>A diary for events, vacations, and adventures</p>
-           <%= link_to "Learn More", "#", class: 'btn' %>
+           <%= link_to "Learn More", welcome_learn_more_path, class: 'btn' %>
          </div>
        </div>
      </div>
