--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -48,7 +48,7 @@
         </button>
         <ul class="dropdown-menu" data-behavior="notification-items"></ul>
       </div>
-    <div class="message-btn pull-right">
+    <div class="pull-right" id="message-btn">
       <a href="/conversations"><i class="fa fa-commenting fa-lg" aria-hidden="true"></i></a>
     </div>
    <% else %>
