--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -62,7 +62,6 @@ body {
     font-weight: 400;
     font-family: serif;
   }
-
   li {
     margin-left: 10px;
   }
@@ -98,7 +97,7 @@ body {
   height: auto;
   padding: 3px 12px;
   border-radius: 5px;
-  width: 372px;
+  width: 100%;
   margin-bottom: 20px;
 }
 
@@ -108,8 +107,8 @@ body {
     padding-right: 20px;
     font-size: 16px;
     margin-right: 30px;
-    width: 300px;
- }
+    width: 100%;
+  }
 }
 
 .collab input[type="text"]{
@@ -191,15 +190,10 @@ body {
 #avatar-btn {
   padding-right: 10px;
   padding-top: 7px;
-
   button:nth-child(2) {
     margin-top: 5.5px;
     color: white;
-    }
-}
-
-.registration {
-  margin-left: 30px;
+  }
 }
 
 .title-all {
@@ -250,17 +244,17 @@ body {
 }
 
 .alert-wrapper {
-    padding: 15px;
-    position: absolute;
-    z-index: 100;
-    background: rgba(11, 233, 203, .8);
-    border-radius: 3px;
-    width: 100%;
-    text-align: center;
-    color: white;
-    font-weight: 500;
-    font-size: 16px;
-    letter-spacing: .5px;
+  padding: 15px;
+  position: absolute;
+  z-index: 100;
+  background: rgba(11, 233, 203, .8);
+  border-radius: 3px;
+  width: 100%;
+  text-align: center;
+  color: white;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: .5px;
 }
 
 #notification-btn {
@@ -289,21 +283,19 @@ body {
   letter-spacing: .5px;
   background-color: darkorange;
   font-size: 20px;
-
-    li {
-      a {
-        color: white;
-        font-family: sans-serif;
-        font-weight: 100;
-        &:hover {
-          background-color: rgba(255,255,255,.5);
-        }
+  li {
+    a {
+      color: white;
+      font-family: sans-serif;
+      font-weight: 100;
+      &:hover {
+        background-color: rgba(255,255,255,.5);
       }
     }
-
-    i {
-      color: white;
-    }
+  }
+  i {
+    color: white;
+  }
 }
 
 .dropdown-user {
@@ -315,7 +307,7 @@ body {
 }
 
 .nav-logo {
-  img{
+  img {
     height: 30px;
   }
 }
@@ -332,7 +324,6 @@ footer {
   &.transparent-foot {
     display: none;
   }
-
   a {
     color: white;
     font-weight: 800;
@@ -340,7 +331,6 @@ footer {
       color: #222;
     }
   }
-
   ul {
     float: left;
     list-style: none;
@@ -359,7 +349,6 @@ footer {
   width: 100%;
   padding-right: 25px;
   background-color: #fafafa;
-
   a {
     color: rgba(1, 1, 1, .5);
     margin-right: 40px;
@@ -373,10 +362,9 @@ footer {
   }
 }
 
-.message-btn {
+#message-btn {
   margin-right: 24px;
   margin-top: 11px;
-
   .glyphicon {
     font-size: 20px;
   }
@@ -403,11 +391,29 @@ footer {
     width: 300px;
     font-weight: 300;
   }
-
   .btn {
     background-color: orange;
     border: 1px solid orange;
     color: white;
+  }
+}
+
+@media screen and (max-width: 1250px) {
+  .search-bar {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 550px) {
+  #avatar-btn {
+    padding-bottom: 10px;
+    margin-right: 100px;
+  }
+  #message-btn {
+    margin-top: 0;
+  }
+  #notification-btn {
+    padding-top: 0;
   }
 }
 
@@ -478,6 +484,7 @@ footer {
     font-size: 18px;
   }
 }
+
 .actions {
   .btn {
     font-size: 16px;
@@ -487,7 +494,6 @@ footer {
 
 .btn-region {
   margin-top: 8px;
-
   button {
     font-size: 18px;
     color: white;
