--- a/app/assets/stylesheets/wikis.scss
+++ b/app/assets/stylesheets/wikis.scss
@@ -19,6 +19,12 @@
   box-shadow: 1px 1px 5px rgba(1,1,1,.3);
 }
 
+@media screen and (max-width: 950px) {
+  .wiki-style {
+    margin-left: 18px;
+  }
+}
+
 .wiki-style img {
   height: 180px;
   width: 310px;
@@ -51,24 +57,22 @@
 }
 
 .wiki-info {
-    border-bottom: 1px solid rgba(1, 0, 1, .2);
-    margin-top: -5px;
-
-      p {
-        font-size: 18px;
-        color: rgba(1,1,1,.5);
-      }
-
-       img {
-        float: right;
-        clear: right;
-        width: 100px;
-        -webkit-border-radius: 150px;
-        -moz-border-radius: 150px;
-        box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-        -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-        -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
-      }
+  border-bottom: 1px solid rgba(1, 0, 1, .2);
+  margin-top: -5px;
+  p {
+    font-size: 18px;
+    color: rgba(1,1,1,.5);
+  }
+  img {
+    float: right;
+    clear: right;
+    width: 100px;
+    -webkit-border-radius: 150px;
+    -moz-border-radius: 150px;
+    box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+    -webkit-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+    -moz-box-shadow: 0 0 8px rgba(0, 0, 0, .8);
+  }
 }
 
 .wiki-btn {
@@ -87,7 +91,6 @@
 
 .new-wiki-form {
   margin-left: 100px;
-  width: 65%;
   padding-left: 30px;
   padding-right: 30px;
   padding-top: 5px;
@@ -112,18 +115,16 @@ text-align: center;
 
 .wiki-details {
   margin-top: 0px;
-
-    h5 {
-      margin-bottom: -2px;
-    }
+  h5 {
+    margin-bottom: -2px;
+  }
 }
 
 .all-images-btn {
   margin-top: 500px;
-
-    .btn {
-      margin-left: 20px;
-    }
+  .btn {
+    margin-left: 20px;
+  }
 }
 
 .link {
@@ -156,27 +157,24 @@ text-align: center;
   margin-top: 10px;
   margin-bottom: 10px;
   padding: 10px;
-
-    h3 {
-      font-weight: 200;
-      font-size: 28px;
-      margin-top: -5px;
-    }
-
-    p {
-      font-size: 16px;
-      font-weight: 300;
-      color: grey;
-    }
+  h3 {
+    font-weight: 200;
+    font-size: 28px;
+    margin-top: -5px;
+  }
+  p {
+    font-size: 16px;
+    font-weight: 300;
+    color: grey;
+  }
 }
 
 .comment-form-div {
   border-top: 1px solid  rgba(1, 1, 1, .2);
   margin-top: 10px;
-
-    h4 {
-      color: rgba(1,1,1,.6);
-      font-weight: 300;
+  h4 {
+    color: rgba(1,1,1,.6);
+    font-weight: 300;
   }
 }
 
@@ -189,7 +187,6 @@ text-align: center;
   position: absolute;
   width: 30%;
   margin-left: 943px;
-
   img {
     padding: 3px;
     width: 90px;
@@ -204,7 +201,6 @@ text-align: center;
   width: 30%;
   margin-left: 943px;
   margin-top: 200px;
-
   img {
     padding: 5px;
     width: 90px;
@@ -235,11 +231,10 @@ text-align: center;
 
 .wiki-attachments {
   padding-bottom: 10px;
-
-    h3 {
-      font-weight: 200;
-      color: rgba(1,1,1,.5);
-    }
+  h3 {
+    font-weight: 200;
+    color: rgba(1,1,1,.5);
+  }
 }
 
 #border {
